feat(tenant-mgmt-facade): add api for getting tenant details
add api for getting tenant details

GH-3
