# facades/tenant-mgmt-facade/src/controllers/tenant.controller.ts
@@ -39,6 +39,7 @@ import {verifySignature} from '../utils';
 import {HttpErrors} from '@loopback/rest';
 import {PaymentMethodEnum, SubscriptionProxyService} from '../services/proxies';
 import {repository} from '@loopback/repository';
+import { AnyObject } from '@loopback/repository';
 
 export class TenantController {
   constructor(
@@ -266,4 +267,32 @@ export class TenantController {
   ): Promise<SubscriptionBillDTO[]> {
     return this.tenantHelper.getTenantBills(currentUser.id);
   }
+      // Get All Tenants
+      @authorize({
+        permissions: [PermissionKey.ViewTenant],
+      })
+      @authenticate(STRATEGY.BEARER, {
+        passReqToCallback: true,
+      })
+      @get('/tenants', {
+        description: 'Retrieve all tenants',
+        security: OPERATION_SECURITY_SPEC,
+        responses: {
+          [STATUS_CODE.OK]: {
+            description: 'Array of Tenant instances',
+            content: {
+              [CONTENT_TYPE.JSON]: {
+                schema: {
+                  type: 'array',
+                  items: getModelSchemaRef(Tenant, {includeRelations: true}),
+                },
+              },
+            },
+          },
+        },
+      })
+      async findTenants( @inject(AuthenticationBindings.CURRENT_USER)
+      currentUser: LeadUser,): Promise<AnyObject> {
+        return this.tenantHelper.getAllTenants(currentUser.id);
+      }
 }
